<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="set_password">Set password</string>
    <string name="confirm_password">Confirm password</string>
</resources>