<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#4E342C">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_login"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textColor="#F3ECEC"
        />
    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        />

    <EditText
        android:id="@+id/et_set_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/set_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background"/>
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background"/>

    <LinearLayout
        android:id="@+id/button_lo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:background="#4E342C"
        >
        <Button
            android:id="@+id/btn_reg_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/register"
            android:textSize="14sp"
            android:padding="12dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:layout_margin="5dp"
            android:backgroundTint="#004003"
            />
        <Button
            android:id="@+id/btn_reg_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/login"
            android:textSize="14sp"
            android:padding="12dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:layout_margin="5dp"
            android:backgroundTint="#3E1205"
            />



    </LinearLayout>


</LinearLayout>